Labes de crear SS

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -56,6 +56,21 @@ estadoOpp:Estado OPP:
 desde:Desde:
 hasta:Hasta:
 
+#Labels - Crear SS
+nss:NºSS:
+nflota:NºFlota:
+origen:Origen:
+entrega:Entrega:
+facturacion:Facturación:
+aclaracion:Aclaración:
+domicilioTitle:Domicilio
+pataconexTitle:Pataconex
+creditoFidelizacionTitle:Crédito de Fidelización
+firmaTitle:Firmas
+resumentSSTitle:Resumen SS
+scoringTitle:Scoring
+detalleTitle:Detalle
+
 #Common
 whiteSpace:&nbsp;
 
