crear SS - agregarItem

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -71,6 +71,22 @@ resumentSSTitle:Resumen SS
 scoringTitle:Scoring
 detalleTitle:Detalle
 
+#Labels - SS - Agregar Item
+tipoOrden:Tipo Orden:
+listaPrecio:Lista Precio:
+item:Item:
+terminoPago:Término Pago:
+precioLista:Precio Lista:
+tipoPlan:Tipo Plan:
+plan:Plan:
+localidad:Localidad:
+cppMpp:CPP/MPP:
+reservarN:Reservar N°:
+alias:Alias:
+ddn:DDN
+ddi:DDI
+roaming:Roaming
+
 #Common
 whiteSpace:&nbsp;
 
