Pantalla de la Busqueda de SS Cerradas con datos mockeados.

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -12,6 +12,12 @@ numeroDocumento:Nº Doc.:
 predefinidas:Predefinidas:
 resultados:Resultados:
 
+#Labels - Buscar SS Cerradas
+estado:Estado:
+cierreDesde:Cierre Desde:
+pataconex:Pataconex:
+firmas:Firmas:
+
 #Labels - Editor Cuenta - Datos
 cuentaPanelTitle:Datos de la cuenta
 aceptar:Aceptar:
