nuevos labels para edicion cuenta

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -19,13 +19,18 @@ pataconex:Pataconex:
 firmas:Firmas:
 
 #Labels - Editor Cuenta - Datos
+datos:Datos
+contactos:Contactos
+domicilios:Domicilios
 cuentaPanelTitle:Datos de la cuenta
 aceptar:Aceptar:
 tipoDocumento:Tipo doc.:
 numero:Número:
+cliente:Cliente:
 razonSocial:Razón Social:
 nombre:Nombre:
 apellido:Apellido:
+telefono:Teléfono
 sexo:Sexo:
 fechaNacimiento:F. Nac.:
 contribuyente:Contribuy.:
