nuevos labels de editar solicitud

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -40,6 +40,7 @@ claseCliente:Clase Cli.:
 categoria:Categoría:
 cicloFacturacion:Ciclo Fact.:
 veraz:Veraz:
+anticipo:Anticipo:
 
 #Labels - Editor Cuenta - Telefono
 telefonoPanelTitle:Teléfono/Fax
@@ -67,7 +68,7 @@ estadoOpp:Estado OPP:
 desde:Desde:
 hasta:Hasta:
 
-#Labels - Crear SS
+#Labels - Editar SS
 nss:NºSS:
 nflota:NºFlota:
 origen:Origen:
@@ -78,9 +79,17 @@ domicilioTitle:Domicilio
 pataconexTitle:Pataconex
 creditoFidelizacionTitle:Crédito de Fidelización
 firmaTitle:Firmas
+firmarSS:Firmar SS:
 resumentSSTitle:Resumen SS
 scoringTitle:Scoring
 detalleTitle:Detalle
+disponible:Disponible:
+vencimiento:Vencimiento:
+autilizar:A utilizar:
+totales:Totales
+desvios:Desvíos:
+creditoFidel:Cred.Fidel.:
+precioVenta:Precio Venta:
 
 #Labels - SS - Agregar Item
 tipoOrden:Tipo Orden:
