se agregan textos por componente domicilio.

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -121,3 +121,24 @@ agregar:Agregar
 #Labels - Veraz
 verazTitledPanel:Resultado Veraz
 
+#Labels - Domicilio
+cpa:CPA:
+calle:Calle:		
+numeroCalle:N°:
+piso:Piso:
+dpto:Dto/Pta:
+uf:UF:
+torre:Torre:
+manzana:Mzna.:
+entre_calle:Entre Calle:
+y_calle:y Calle:
+cp:CP:
+localidad:Localidad:
+partido:Partido:
+provincia:Provincia:
+facturacion:Facturación:
+entrega:Entrega:
+validado:Validado por EECC/Agente:
+obs_domicilio:Observaciones:
+usuario_domicilio:Usuario:
+fecha_Modificacion:Fecha Modificación:
