Se agregan estilos (requerido) a algunos labels

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -69,11 +69,11 @@ desde:Desde:
 hasta:Hasta:
 
 #Labels - Editar SS
-nss:NºSS:
+nss:<span class="req">NºSS:</span>
 nflota:NºFlota:
-origen:Origen:
-entrega:Entrega:
-facturacion:Facturación:
+origen:<span class="req">Origen:</span>
+entrega:<span class="req">Entrega:</span>
+facturacion:<span class="req">Facturación:</span>
 aclaracion:Aclaración:
 domicilioTitle:Domicilio
 pataconexTitle:Pataconex
