eliminados buscar/limpiar duplicados

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -1,7 +1,3 @@
-#Commans - Buscar Cuenta - Filtro
-buscar:Buscar
-limpiar:Limpiar
-
 #Labels - Buscar Cuenta - Filtro
 numeroCliente:Nº Cliente:
 numeroNextel:N° Nextel:
@@ -23,7 +19,6 @@ datos:Datos
 contactos:Contactos
 domicilios:Domicilios
 cuentaPanelTitle:Datos de la cuenta
-aceptar:Aceptar:
 tipoDocumento:Tipo doc.:
 numero:Número:
 cliente:Cliente:
@@ -112,6 +107,7 @@ whiteSpace:&nbsp;
 
 #Link buttons
 cerrar:cerrar
+aceptar:aceptar
 
 #Bottons
 buscar:Buscar
