--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -36,6 +36,10 @@ categoria:Categoría:
 cicloFacturacion:Ciclo Fact.:
 veraz:Veraz:
 anticipo:Anticipo:
+cargo:cargo
+iibb:IIBB
+use:Use
+nombreDivision:Nombre División
 
 #Labels - Editor Cuenta - Telefono
 telefonoPanelTitle:Teléfono/Fax
@@ -53,6 +57,10 @@ laboral:Laboral:
 #Labels - Editor Cuenta - Forma de Pago
 formaDePagoPanelTitle:Forma de Pago
 modalidad:Modalidad:
+
+#Labels - Editor Cuenta - Vendedor
+vendedorPanelTitle:Vendedor
+canalVentas:Canal Vtas.
 
 #Labels - Editor Cuenta - Fecha Usuario
 usuario: Usuario:
