nuevos label para edicion cuentas

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -36,7 +36,7 @@ categoria:Categoría:
 cicloFacturacion:Ciclo Fact.:
 veraz:Veraz:
 anticipo:Anticipo:
-cargo:cargo
+cargo:Cargo
 iibb:IIBB
 use:Use
 nombreDivision:Nombre División
