se agrega si,no y campos requeridos

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -72,11 +72,11 @@ desde:Desde:
 hasta:Hasta:
 
 #Labels - Editar SS
-nss:<span class="req">NºSS:</span>
+nssReq:<span class="req">NºSS:</span>
 nflota:NºFlota:
-origen:<span class="req">Origen:</span>
-entrega:<span class="req">Entrega:</span>
-facturacion:<span class="req">Facturación:</span>
+origenReq:<span class="req">Origen:</span>
+entregaReq:<span class="req">Entrega:</span>
+facturacionReq:<span class="req">Facturación:</span>
 aclaracion:Aclaración:
 domicilioTitle:Domicilio
 pataconexTitle:Pataconex
@@ -119,6 +119,8 @@ aceptar:aceptar
 guardar:guardar
 cancelar:cancelar
 crear:crear
+si:si
+no:no
 
 #Bottons
 buscar:Buscar
