nuevos label para edicion cuentas

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -36,10 +36,10 @@ categoria:Categoría:
 cicloFacturacion:Ciclo Fact.:
 veraz:Veraz:
 anticipo:Anticipo:
-cargo:Cargo
-iibb:IIBB
-use:Use
-nombreDivision:Nombre División
+cargo:Cargo:
+iibb:IIBB:
+use:Use:
+nombreDivision:Nombre División:
 
 #Labels - Editor Cuenta - Telefono
 telefonoPanelTitle:Teléfono/Fax
@@ -57,10 +57,17 @@ laboral:Laboral:
 #Labels - Editor Cuenta - Forma de Pago
 formaDePagoPanelTitle:Forma de Pago
 modalidad:Modalidad:
+tipoCuenta:Tipo Cuenta
+cbu:CBU
+tarjetaTipo:Tarjeta Tipo:
+nroTarjeta:Nro Tarjeta:
+vtoMes: Vto. mes:
+vtoAnio: Vto. año:
 
 #Labels - Editor Cuenta - Vendedor
 vendedorPanelTitle:Vendedor
-canalVentas:Canal Vtas.
+vendedorNombre:Nombre:
+canalVentas:Canal Vtas.:
 
 #Labels - Editor Cuenta - Fecha Usuario
 usuario: Usuario:
