Se agregaron las constantes del PopUp de Item

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -107,6 +107,8 @@ listaPrecio:Lista Precio:
 item:Item:
 terminoPago:Término Pago:
 precioLista:Precio Lista:
+cantidad:Cantidad:
+total:Total:
 tipoPlan:Tipo Plan:
 plan:Plan:
 localidad:Localidad:
@@ -116,6 +118,18 @@ alias:Alias:
 ddn:DDN
 ddi:DDI
 roaming:Roaming
+imei:IMEI:
+sim:SIM:
+modeloEq:Modelo Eq.:
+pin:Nº Pin:
+serie:Nº Serie:
+
+#ListBox - SS - Agregar Item
+alquilerAMBA:Alquiler (AMBA)
+ventaAMBA:Venta (AMBA)
+ventaAccesorio: Venta de Accesorios
+activacion:Activacion
+ventaLicencia:Venta de Licencias BB
 
 #Common
 whiteSpace:&nbsp;
