nuevos mensajes de ERR

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -19,59 +19,62 @@ datos:Datos
 contactos:Contactos
 domicilios:Domicilios
 cuentaPanelTitle:Datos de la cuenta
-tipoDocumento:Tipo doc.:
-numero:Número:
-cliente:Cliente:
-razonSocial:Razón Social:
-nombre:Nombre:
-apellido:Apellido:
+tipoDocumento:Tipo doc.
+numero:Número
+cliente:Cliente
+razonSocial:Razón Social
+nombre:Nombre
+apellido:Apellido
 telefono:Teléfono
-sexo:Sexo:
-fechaNacimiento:F. Nac.:
-contribuyente:Contribuy.:
-provedorAnterior:Prov. Ant.:
-rubro:Rubro:
-claseCliente:Clase Cli.:
-categoria:Categoría:
-cicloFacturacion:Ciclo Fact.:
-veraz:Veraz:
-anticipo:Anticipo:
-cargo:Cargo:
-iibb:IIBB:
-use:Use:
-nombreDivision:Nombre División:
+sexo:Sexo
+fechaNacimiento:F. Nac.
+contribuyente:Contribuy.
+provedorAnterior:Prov. Ant.
+rubro:Rubro
+claseCliente:Clase Cli.
+categoria:Categoría
+cicloFacturacion:Ciclo Fact.
+veraz:Veraz
+anticipo:Anticipo
+cargo:Cargo
+iibb:IIBB
+use:Use
+nombreDivision:Nombre División
+validarTarjeta:Validar tarjeta
 
 #Labels - Editor Cuenta - Telefono
 telefonoPanelTitle:Teléfono/Fax
-principal:Principal:
-adicional:Adicional:
-celular:Celular:
-fax:Fax:
-observaciones:Obs.:
+principal:Principal
+adicional:Adicional
+celular:Celular
+fax:Fax
+observaciones:Obs.
+area: Cod área
+interno: Interno
 
 #Labels - Editor Cuenta - Email
 emailPanelTitle:E-Mail
-personal:Personal:
-laboral:Laboral:
+personal:Personal
+laboral:Laboral
 
 #Labels - Editor Cuenta - Forma de Pago
 formaDePagoPanelTitle:Forma de Pago
-modalidad:Modalidad:
+modalidad:Modalidad
 tipoCuenta:Tipo Cuenta
 cbu:CBU
-tarjetaTipo:Tarjeta Tipo:
-nroTarjeta:Nro Tarjeta:
-vtoMes: Vto. mes:
-vtoAnio: Vto. año:
+tarjetaTipo:Tarjeta Tipo
+nroTarjeta:Nro Tarjeta
+vtoMes: Vto. mes
+vtoAnio: Vto. año
 
 #Labels - Editor Cuenta - Vendedor
 vendedorPanelTitle:Vendedor
-vendedorNombre:Nombre:
-canalVentas:Canal Vtas.:
+vendedorNombre:Nombre
+canalVentas:Canal Vtas.
 
 #Labels - Editor Cuenta - Fecha Usuario
-usuario: Usuario:
-fechaCreacion: Fecha Creación:
+usuario: Usuario
+fechaCreacion: Fecha Creación
 
 #Labels - Editor Oportunidades
 estadoOpp:Estado OPP:
@@ -172,3 +175,23 @@ validado:Validado por EECC/Agente:
 obs_domicilio:Observaciones:
 usuario_domicilio:Usuario:
 fecha_Modificacion:Fecha Modificación:
+
+
+##MENSAJES ERROR
+ERR_CAMPO_OBLIGATORIO:El campo {1} es obligatorio
+ERR_DOMICILIO_FACTURACION:La cuenta debe tener un domicilio principal de facturación
+ERR_DOMICILIO_ENTREGA:La cuenta debe tener un domicilio principal de entrega
+ERR_FORMULARIO_DIRTY:Hay cambios sin guardar: presione Aceptar para descartarlos o Cancelar para continuar editando.
+ERR_TARJETA_NO_VALIDA:Tarjeta no válida: La tarjeta ingresada no es válida. (se)
+ERR_AL_VALIDAR_TARJETA:Hubo un error al validar tarjeta
+ERR_EMAIL_NO_VALIDO:El campo {1}: no tiene un email válido.
+ERR_FECHA_NO_VALIDA:El campo {1}: no tiene una fecha válida. Formato válido: "dd/mm/aaaa"
+ERR_FORMATO:El formato del campo {1} no es válido
+
+##MENSAJES GENERALES
+MSG_TARJETA_VALIDA:Tarjeta válida: La tarjeta ingresada es válida. (se)
+
+
+
+
+
