--- a/tomcat/webapps/ROOT/WEB-INF/web.xml
+++ b/tomcat/webapps/ROOT/WEB-INF/web.xml
@@ -52,5 +52,15 @@
 		<servlet-name>shell</servlet-name>
 		<url-pattern>/*</url-pattern>
 	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>download</servlet-name>
+		<servlet-class>ar.com.nextel.web.download.DownloadServlet</servlet-class>
+	</servlet>
+	
+	<servlet-mapping>
+		<servlet-name>download</servlet-name>
+		<url-pattern>/download/*</url-pattern>
+	</servlet-mapping>
 
 </web-app>
