--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -26,6 +26,7 @@ razonSocial:Razón Social
 nombre:Nombre
 apellido:Apellido
 telefono:Teléfono
+telefonos:Teléfonos
 sexo:Sexo
 fechaNacimiento:F. Nac.
 contribuyente:Contribuy.
