--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -188,6 +188,8 @@ ERR_AL_VALIDAR_TARJETA:Hubo un error al validar tarjeta
 ERR_EMAIL_NO_VALIDO:El campo {1}: no tiene un email válido.
 ERR_FECHA_NO_VALIDA:El campo {1}: no tiene una fecha válida. Formato válido: "dd/mm/aaaa"
 ERR_FORMATO:El formato del campo {1} no es válido
+ERR_ANIO_NO_VALIDO:El año de vencimiento de la tarjeta no es válido
+ERR_DIA_HABIL:Debe ingresar un dia hábil
 
 ##MENSAJES GENERALES
 MSG_TARJETA_VALIDA:Tarjeta válida: La tarjeta ingresada es válida. (se)
