se agrego constantes para el pup up de generar ss

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -1,3 +1,7 @@
+#Commans - Buscar Cuenta - Filtro
+buscar:Buscar
+limpiar:Limpiar
+
 #Labels - Buscar Cuenta - Filtro
 numeroCliente:Nº Cliente:
 numeroNextel:N° Nextel:
@@ -19,6 +23,7 @@ datos:Datos
 contactos:Contactos
 domicilios:Domicilios
 cuentaPanelTitle:Datos de la cuenta
+aceptar:Aceptar:
 tipoDocumento:Tipo doc.
 numero:Número
 cliente:Cliente
@@ -127,6 +132,7 @@ sim:SIM:
 modeloEq:Modelo Eq.:
 pin:Nº Pin:
 serie:Nº Serie:
+nuevo:Nuevo
 
 #ListBox - SS - Agregar Item
 alquilerAMBA:Alquiler (AMBA)
