--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -26,24 +26,20 @@
 	<!-- Hibernate -->
 	<filter-mapping>
 		<filter-name>hibernateFilter</filter-name>
-		<url-pattern>*.do</url-pattern>
-	</filter-mapping>
-	<filter-mapping>
-		<filter-name>hibernateFilter</filter-name>
 		<url-pattern>*.rpc</url-pattern>
-	</filter-mapping>
-	<filter-mapping>
-		<filter-name>hibernateFilter</filter-name>
-		<url-pattern>*.jsp</url-pattern>
 	</filter-mapping>
 	<filter-mapping>
 		<filter-name>hibernateFilter</filter-name>
 		<url-pattern>*.pdf</url-pattern>
 	</filter-mapping>
-	<!-- Levanta el contexto -->
+	<filter-mapping>
+		<filter-name>hibernateFilter</filter-name>
+		<url-pattern>*.rtf</url-pattern>
+	</filter-mapping>	
+	
 	<filter-mapping>
 		<filter-name>executionContextFilter</filter-name>
-		<url-pattern>/*</url-pattern>
+		<url-pattern>*.rpc</url-pattern>
 	</filter-mapping>
 
 	<servlet>
