cambios componente domicilio.

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -178,7 +178,8 @@ partido:Partido:
 provincia:Provincia:
 facturacion:Facturación:
 entrega:Entrega:
-validado:Validado por EECC/Agente:
+validado1:Validado por
+validado2:EECC/Agente:
 obs_domicilio:Observaciones:
 usuario_domicilio:Usuario:
 fecha_Modificacion:Fecha Modificación:
