--- a/pom.xml
+++ b/pom.xml
@@ -235,9 +235,9 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-eclipse-plugin</artifactId>
 				<configuration>
-					<additionalProjectFacets>
-						<in.cypal.studio.gwt.core.gwtFacet>1.5</in.cypal.studio.gwt.core.gwtFacet>
-					</additionalProjectFacets>
+<!--					<additionalProjectFacets>-->
+<!--						<in.cypal.studio.gwt.core.gwtFacet>1.5</in.cypal.studio.gwt.core.gwtFacet>-->
+<!--					</additionalProjectFacets>-->
 					<wtpversion>2.0</wtpversion>
 				</configuration>
 			</plugin>	
