validacion completitud edicion cuenta

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -197,6 +197,9 @@ ERR_FECHA_NO_VALIDA:El campo {1}: no tiene una fecha válida. Formato válido: "
 ERR_FORMATO:El formato del campo {1} no es válido
 ERR_ANIO_NO_VALIDO:El año de vencimiento de la tarjeta no es válido
 ERR_DIA_HABIL:Debe ingresar un dia hábil
+ERR_FALTA_DOMICILIO_ENTREGA:La cuenta debe tener un domicilio principal de entrega.
+ERR_FALTA_DOMICILIO_FACTURACION:La cuenta debe tener un domicilio principal de facturación.
+
 
 ##MENSAJES GENERALES
 MSG_TARJETA_VALIDA:Tarjeta válida: La tarjeta ingresada es válida. (se)
