cambios componente domicilio.

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -189,6 +189,7 @@ fecha_Modificacion:Fecha Modificación:
 ERR_CAMPO_OBLIGATORIO:El campo {1} es obligatorio
 ERR_DOMICILIO_FACTURACION:La cuenta debe tener un domicilio de facturación.
 ERR_DOMICILIO_ENTREGA:La cuenta debe tener un domicilio de entrega.
+ERR_DOMICILIO_PPAL_DUPLICADO:No se puede agregar un domicilio principal para la cuenta.
 ERR_FORMULARIO_DIRTY:Hay cambios sin guardar: presione Aceptar para descartarlos o Cancelar para continuar editando.
 ERR_TARJETA_NO_VALIDA:Tarjeta no válida: La tarjeta ingresada no es válida. (se)
 ERR_AL_VALIDAR_TARJETA:Hubo un error al validar tarjeta
