--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,6 +15,27 @@
 	</listener>
 
 	<filter>
+		<filter-name>AuthorizationFilter</filter-name>
+		<display-name>AuthorizationFilter</display-name>
+		<description>
+			WINIT User Center Authorization Filter
+		</description>
+		<filter-class>winit.uc.filter.AuthorizationFilter</filter-class>
+		<init-param>
+			<param-name>applicationName</param-name>
+			<param-value>Nexus</param-value>
+		</init-param>
+		<init-param>
+			<param-name>UCAuthorizationFilterName</param-name>
+			<param-value>nexusfilter</param-value>
+		</init-param>
+		<init-param>
+			<param-name>SecurityRelaxed</param-name>
+			<param-value>true</param-value>
+		</init-param>
+	</filter>
+
+	<filter>
 		<filter-name>hibernateFilter</filter-name>
 		<filter-class>org.springframework.orm.hibernate3.support.OpenSessionInViewFilter</filter-class>
 	</filter>
@@ -22,6 +43,12 @@
 		<filter-name>executionContextFilter</filter-name>
 		<filter-class>ar.com.nextel.sfa.server.filter.ExecutionContextFilter</filter-class>
 	</filter>
+
+	<!-- WINIT -->
+	<filter-mapping>
+		<filter-name>AuthorizationFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 
 	<!-- Hibernate -->
 	<filter-mapping>
@@ -36,7 +63,12 @@
 		<filter-name>hibernateFilter</filter-name>
 		<url-pattern>*.rtf</url-pattern>
 	</filter-mapping>	
-	
+	<filter-mapping>
+		<filter-name>hibernateFilter</filter-name>
+		<url-pattern>*.csv</url-pattern>
+	</filter-mapping>	
+
+	<!-- SFA -->
 	<filter-mapping>
 		<filter-name>executionContextFilter</filter-name>
 		<url-pattern>*.rpc</url-pattern>
@@ -45,7 +77,7 @@
 	<servlet>
 		<servlet-name>CuentaRpcService</servlet-name>
 		<servlet-class>
-			ar.com.nextel.sfa.server.CuentaRpcServiceImpl</servlet-class>
+		ar.com.nextel.sfa.server.CuentaRpcServiceImpl</servlet-class>
 	</servlet>
 	<servlet>
 		<servlet-name>SolicitudRpcService</servlet-name>
@@ -67,7 +99,11 @@
 		<servlet-class>
 		ar.com.nextel.sfa.server.OportunidadNegocioRpcServiceImpl</servlet-class>
 	</servlet>
-
+	<servlet>
+		<servlet-name>UserCenterRpcService</servlet-name>
+		<servlet-class>
+		ar.com.nextel.sfa.server.UserCenterRpcServiceImpl</servlet-class>
+	</servlet>
 	
 	<servlet-mapping>
 		<servlet-name>CuentaRpcService</servlet-name>
@@ -89,6 +125,10 @@
 		<servlet-name>OportunidadNegocioRpcService</servlet-name>
 		<url-pattern>/ar.com.nextel.sfa.SFAWeb/oportunidades.rpc</url-pattern>
 	</servlet-mapping>	
+	<servlet-mapping>
+		<servlet-name>UserCenterRpcService</servlet-name>
+		<url-pattern>/ar.com.nextel.sfa.SFAWeb/usercenter.rpc</url-pattern>
+	</servlet-mapping>
 	
 	<servlet>
 		<servlet-name>download</servlet-name>
