--- a/tomcat/webapps/ROOT/WEB-INF/web.xml
+++ b/tomcat/webapps/ROOT/WEB-INF/web.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app>
+<!DOCTYPE web-app PUBLIC
+ "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
+ "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
+<web-app>
+	<display-name>SFA Revolution</display-name>
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>classpath:ar/com/nextel/sfa/applicationContext.xml</param-value>
 	</context-param>
-   
+
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
@@ -14,13 +18,51 @@
 		<filter-name>hibernateFilter</filter-name>
 		<filter-class>org.springframework.orm.hibernate3.support.OpenSessionInViewFilter</filter-class>
 	</filter>
-
 	<filter>
 		<filter-name>executionContextFilter</filter-name>
 		<filter-class>ar.com.nextel.sfa.server.filter.ExecutionContextFilter</filter-class>
-	</filter>	
+	</filter>
 	
-		<!-- Hibernate -->
+	<filter>
+		<filter-name>AuthorizationFilter</filter-name>
+		<display-name>AuthorizationFilter</display-name>
+		<description>
+			WINIT User Center Authorization Filter
+		</description>
+		<filter-class>winit.uc.filter.AuthorizationFilter</filter-class>
+		<init-param>
+			<param-name>applicationName</param-name>
+			<param-value>Nexus</param-value>
+		</init-param>
+		<init-param>
+			<param-name>UCAuthorizationFilterName</param-name>
+			<param-value>nexusfilter</param-value>
+		</init-param>
+		<init-param>
+			<param-name>SecurityRelaxed</param-name>
+			<param-value>true</param-value>
+		</init-param>
+	</filter>
+
+<!-- winit -->
+	<filter-mapping>
+		<filter-name>AuthorizationFilter</filter-name>
+		<url-pattern>*.rpc</url-pattern>
+	</filter-mapping>
+	<filter-mapping>
+		<filter-name>AuthorizationFilter</filter-name>
+		<url-pattern>*.pdf</url-pattern>
+	</filter-mapping>
+	<filter-mapping>
+		<filter-name>AuthorizationFilter</filter-name>
+		<url-pattern>*.rtf</url-pattern>
+	</filter-mapping>
+	<filter-mapping>
+		<filter-name>AuthorizationFilter</filter-name>
+		<url-pattern>*.csv</url-pattern>
+	</filter-mapping>
+
+    <!-- Hibernate -->
 	<filter-mapping>
 		<filter-name>hibernateFilter</filter-name>
 		<url-pattern>*.rpc</url-pattern>
@@ -29,21 +71,40 @@
 		<filter-name>hibernateFilter</filter-name>
 		<url-pattern>*.pdf</url-pattern>
 	</filter-mapping>
-	<filter-mapping>
+		<filter-mapping>
 		<filter-name>hibernateFilter</filter-name>
 		<url-pattern>*.rtf</url-pattern>
-	</filter-mapping>	
-	
+	</filter-mapping>
+		<filter-mapping>
+		<filter-name>hibernateFilter</filter-name>
+		<url-pattern>*.csv</url-pattern>
+	</filter-mapping>
+
+	<!-- Levanta el contexto -->
 	<filter-mapping>
 		<filter-name>executionContextFilter</filter-name>
 		<url-pattern>*.rpc</url-pattern>
 	</filter-mapping>
-	
+	<filter-mapping>
+		<filter-name>executionContextFilter</filter-name>
+		<url-pattern>*.rtf</url-pattern>
+	</filter-mapping>
+		<filter-mapping>
+		<filter-name>executionContextFilter</filter-name>
+		<url-pattern>*.pdf</url-pattern>
+	</filter-mapping>
+		<filter-mapping>
+		<filter-name>executionContextFilter</filter-name>
+		<url-pattern>*.csv</url-pattern>
+	</filter-mapping>
+
 	<servlet>
 		<servlet-name>shell</servlet-name>
-		<servlet-class>com.google.gwt.dev.shell.GWTShellServlet</servlet-class>
+		<servlet-class>
+			com.google.gwt.dev.shell.GWTShellServlet
+		</servlet-class>
+		<load-on-startup>1</load-on-startup>
 	</servlet>
-	
 	<servlet-mapping>
 		<servlet-name>shell</servlet-name>
 		<url-pattern>/*</url-pattern>
@@ -59,4 +120,7 @@
 		<url-pattern>/download/*</url-pattern>
 	</servlet-mapping>
 
+	<welcome-file-list>
+		<welcome-file>index.html</welcome-file>
+	</welcome-file-list>
 </web-app>
