--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -201,10 +201,16 @@ ERR_DIA_HABIL:Debe ingresar un dia hábil
 ERR_FALTA_DOMICILIO_ENTREGA:La cuenta debe tener un domicilio principal de entrega.
 ERR_FALTA_DOMICILIO_FACTURACION:La cuenta debe tener un domicilio principal de facturación.
 
+## Solicitud de servicio
+ERR_NSS_LONG:El Nº de solicitud debe tener menos de 10 dígitos.
+ERR_FIDELIZACION:La cantidad de Crédito de Fidelización a utilizar no puede exceder el máximo disponible.
+ERR_PATACONEX:La cantidad de Pataconex ingresada excede el Precio de Venta Total.
+ERR_FALTA_ALQUILER:El ítem {1} debe tener un servicio adicional de tipo Alquiler Única Vez seleccionado.
+ERR_CANT_CERO:El campo {1} debe ser mayor a 0 (cero).
 
 ##MENSAJES GENERALES
 MSG_TARJETA_VALIDA:Tarjeta válida: La tarjeta ingresada es válida. (se)
-
+MSG_PREGUNTA_GUARDAR:¿Desea guardar los cambios?
 
 
 
