Mensajes de error referidos a reserva de numeros telefonicos

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -206,7 +206,10 @@ ERR_NSS_LONG:El Nº de solicitud debe tener menos de 10 dígitos.
 ERR_FIDELIZACION:La cantidad de Crédito de Fidelización a utilizar no puede exceder el máximo disponible.
 ERR_PATACONEX:La cantidad de Pataconex ingresada excede el Precio de Venta Total.
 ERR_FALTA_ALQUILER:El ítem {1} debe tener un servicio adicional de tipo Alquiler Única Vez seleccionado.
-ERR_CANT_CERO:El campo {1} debe ser mayor a 0 (cero).
+ERR_CANT_MA_CERO:El campo {1} debe ser mayor a 0 (cero).
+ERR_CANT_UNO: El campo Cantidad: Debe ser 1 para una reserva de número.
+ERR_REQUIRED_SELECTION:Debe seleccionar una de las opciones
+ERR_NUMERO_NO_DISPONIBLE:El número de línea no se encuentra disponible.
 
 ##MENSAJES GENERALES
 MSG_TARJETA_VALIDA:Tarjeta válida: La tarjeta ingresada es válida. (se)
