--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
 	<name>SFA Revolution</name>
 	
 	<!--  include pluginRepository and repository for GWT-Maven -->
+	<!-- No cargo ningún repositorio, para que los traiga del proxy que tenga configurado en el settings.xml -->
+	<!--
 	<pluginRepositories>
         <pluginRepository>
             <id>gwt-maven-plugins</id>
@@ -22,8 +24,34 @@
             <id>gwt-maven</id>
             <url>http://gwt-maven.googlecode.com/svn/trunk/mavenrepo/</url>
         </repository>
+        <repository>
+            <id>openqa-releases</id>
+            <name>Openqa Release Repository</name>
+            <url>http://nexus.openqa.org/content/repositories/releases</url>
+            <layout>default</layout>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+        </repository>
+        <repository>
+            <id>openqa-snapshots</id>
+            <name>Openqa Snapshot Repository</name>
+            <url>http://nexus.openqa.org/content/repositories/snapshots</url>
+            <layout>default</layout>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>daily</updatePolicy>
+                <checksumPolicy>ignore</checksumPolicy>
+            </snapshots>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+        </repository>
     </repositories>
-    
+    -->
 	<!--  convenience to define GWT version in one place -->
 	<properties>
 		<gwtVersion>1.5.3</gwtVersion>
@@ -142,7 +170,57 @@
 			<version>4.1</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>3.8.2</version>
+            <scope>test</scope>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.openqa.selenium.client-drivers</groupId>
+            <artifactId>selenium-java-client-driver</artifactId>
+            <version>1.0-beta-1</version>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
+	<developers>
+		<developer>
+			<id>ebechtold</id>
+			<name>Eduardo Bechtold</name>
+			<email>eduardo.bechtold@snoopconsulting.com</email>
+		</developer>
+		<developer>
+			<id>rgrippo</id>
+			<name>Raul Grippo</name>
+			<email>raul.grippo@snoopconsulting.com</email>
+		</developer>
+		<developer>
+			<id>chorch</id>
+			<name>Jorge Garcia Perez</name>
+			<email>jorge.garcia@snoopconsulting.com</email>
+		</developer>
+		<developer>
+			<id>esalvador</id>
+			<name>Esteban Salvador</name>
+			<email>esteban.salvador@snoopconsulting.com</email>
+		</developer>
+		<developer>
+			<id>mrial</id>
+			<name>Melina Rial</name>
+			<email>melina.rial@snoopconsulting.com</email>
+		</developer>
+		<developer>
+			<id>ramiro</id>
+			<name>Ramiro Gonzalez Maciel</name>
+			<email>ramiro@snoopconsulting.com</email>
+		</developer>
+		
+	</developers>
+	<organization>
+		<name>Snoop Consulting</name>
+		<url>http://www.snoopconsulting.com</url>
+	</organization>
 	
 	<build>
 		<plugins>
@@ -164,7 +242,6 @@
 					<i18nConstantsNames>
                         <value>ar.com.nextel.sfa.client.constant.SfaStatic</value>
                     </i18nConstantsNames>
-					<extraJvmArgs>-Xms256m -Xmx1024m</extraJvmArgs>
 					<gwtVersion>${gwtVersion}</gwtVersion>
 				</configuration>
 				<executions>
@@ -240,7 +317,42 @@
 <!--					</additionalProjectFacets>-->
 					<wtpversion>2.0</wtpversion>
 				</configuration>
-			</plugin>	
+			</plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>selenium-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>pre-integration-test</phase>
+                        <goals>
+                            <goal>start-server</goal>
+                        </goals>
+                        <configuration>
+                            <background>true</background>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <!-- Skip the normal tests, we'll run them in the integration-test phase -->
+                    <skip>true</skip>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>integration-test</phase>
+                        <goals>
+                            <goal>test</goal>
+                        </goals>
+                        <configuration>
+						<!-- Skip los tests del selenium? -->
+                            <skip>true</skip>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>			
 		</plugins>
 	</build>
 	
@@ -281,4 +393,20 @@
 			</activation>
 		</profile>
 	</profiles>
+  <reporting>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-report-plugin</artifactId>
+        <version>2.4.2</version>
+      </plugin>
+    </plugins>
+  </reporting>
+  <distributionManagement>
+    <snapshotRepository>
+      <id>server04</id>
+      <name>Snoop REPO Snapshots</name>
+      <url>http://server04:8081/nexus/content/repositories/SnoopREPOSnap/</url>
+    </snapshotRepository>
+  </distributionManagement>  
 </project>
