--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -133,6 +133,7 @@ modeloEq:Modelo Eq.:
 pin:Nº Pin:
 serie:Nº Serie:
 nuevo:Nuevo
+crearSS:^Crear SS
 
 #ListBox - SS - Agregar Item
 alquilerAMBA:Alquiler (AMBA)
@@ -200,6 +201,7 @@ ERR_ANIO_NO_VALIDO:El año de vencimiento de la tarjeta no es válido
 ERR_DIA_HABIL:Debe ingresar un dia hábil
 ERR_FALTA_DOMICILIO_ENTREGA:La cuenta debe tener un domicilio principal de entrega.
 ERR_FALTA_DOMICILIO_FACTURACION:La cuenta debe tener un domicilio principal de facturación.
+ERR_CREAR_SS_EDITOR_CUENTA_DIRTY:La cuenta tiene cambios sin guardar. Guarde o descarte los cambios antes de crear una solicitud de servicio.
 
 ## Solicitud de servicio
 ERR_NSS_LONG:El Nº de solicitud debe tener menos de 10 dígitos.
@@ -213,9 +215,10 @@ ERR_NUMERO_NO_DISPONIBLE:El número de línea no se encuentra disponible.
 ERR_NUMERO_RESRVA:El campo Reservar N° debe tener cuatro dígitos numéricos.
 
 ##MENSAJES GENERALES
+MSG_DIALOG_TITLE:Mensaje
 MSG_TARJETA_VALIDA:Tarjeta válida: La tarjeta ingresada es válida. (se)
 MSG_PREGUNTA_GUARDAR:¿Desea guardar los cambios?
-
+MSG_NO_HAY_DATOS_NUEVOS:No hay datos nuevos para guardar
 
 
 
