+ division suscriptor creasSS, agregarDivSusc,etc

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -134,6 +134,9 @@ pin:Nº Pin:
 serie:Nº Serie:
 nuevo:Nuevo
 crearSS:^Crear SS
+agregarDivSusc:^Agregar
+division:División
+suscriptor:Suscriptor
 
 #ListBox - SS - Agregar Item
 alquilerAMBA:Alquiler (AMBA)
