--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -133,6 +133,8 @@ modeloEq:Modelo Eq.:
 pin:Nº Pin:
 serie:Nº Serie:
 nuevo:Nuevo
+verificarSim:Verificar SIM
+verificarImei:Verificar IMEI
 crearSS:^Crear SS
 agregarDivSusc:^Agregar
 division:División
@@ -215,7 +217,9 @@ ERR_CANT_MA_CERO:El campo {1} debe ser mayor a 0 (cero).
 ERR_CANT_UNO: El campo Cantidad debe ser 1 para una reserva de número.
 ERR_REQUIRED_SELECTION:Debe seleccionar una de las opciones
 ERR_NUMERO_NO_DISPONIBLE:El número de línea no se encuentra disponible.
-ERR_NUMERO_RESRVA:El campo Reservar N° debe tener cuatro dígitos numéricos.
+ERR_NUMERO_RESERVA:El campo Reservar N° debe tener cuatro dígitos numéricos.
+ERR_IMEI_LENGHT:El campo IMEI debe tener 15 dígitos.
+MSG_NUMERO_RESERVADO:El número de línea quedó reservado.<br>Para modificar alguno de los campos grisados, debe liberar la reserva de número realizada.
 
 ##MENSAJES GENERALES
 MSG_DIALOG_TITLE:Mensaje
