--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -2,6 +2,9 @@
 buscar:Buscar
 limpiar:Limpiar
 
+#Buscar Cuenta - Cant.Total
+totalCuentasBuscadas:Número de resultados: 
+
 #Labels - Buscar Cuenta - Filtro
 numeroCliente:Nº Cliente:
 numeroNextel:N° Nextel:
