nuevas labels y errores

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -112,28 +112,30 @@ totales:Totales
 desvios:Desvíos:
 creditoFidel:Cred.Fidel.:
 precioVenta:Precio Venta:
+consultarScoringTitle:Consultar Scoring
 
 #Labels - SS - Agregar Item
 tipoOrden:Tipo Orden:
 listaPrecio:Lista Precio:
-item:Item:
-terminoPago:Término Pago:
+item:<span class="req">Item:</span>
+terminoPago:<span class="req">Término Pago:</span>
 precioLista:Precio Lista:
-cantidad:Cantidad:
+cantidadReq:<span class="req">Cantidad:</span>
 total:Total:
 tipoPlan:Tipo Plan:
-plan:Plan:
+plan:<span class="req">Plan:</span>
 localidad:Localidad:
-cppMpp:CPP/MPP:
+cppMpp:<span class="req">CPP/MPP:</span>
 reservarN:Reservar N°:
 alias:Alias:
 ddn:DDN
 ddi:DDI
 roaming:Roaming
-imei:IMEI:
+imei:<span class="req">IMEI:</span>
 sim:SIM:
-modeloEq:Modelo Eq.:
-pin:Nº Pin:
+modeloEq:<span class="req">Modelo Eq.:</span>
+localidadReq:<span class="req">Localidad:</span>
+pin:<span class="req">Nº Pin:</span>
 serie:Nº Serie:
 nuevo:Nuevo
 verificarSim:Verificar SIM
@@ -212,6 +214,7 @@ ERR_FALTA_DOMICILIO_FACTURACION:La cuenta debe tener un domicilio principal de f
 ERR_CREAR_SS_EDITOR_CUENTA_DIRTY:La cuenta tiene cambios sin guardar. Guarde o descarte los cambios antes de crear una solicitud de servicio.
 
 ## Solicitud de servicio
+ERR_LENGHT:El campo {1} debe tener {2} dígitos.
 ERR_NSS_LONG:El Nº de solicitud debe tener menos de 10 dígitos.
 ERR_FIDELIZACION:La cantidad de Crédito de Fidelización a utilizar no puede exceder el máximo disponible.
 ERR_PATACONEX:La cantidad de Pataconex ingresada excede el Precio de Venta Total.
@@ -221,7 +224,6 @@ ERR_CANT_UNO: El campo Cantidad debe ser 1 para una reserva de número.
 ERR_REQUIRED_SELECTION:Debe seleccionar una de las opciones
 ERR_NUMERO_NO_DISPONIBLE:El número de línea no se encuentra disponible.
 ERR_NUMERO_RESERVA:El campo Reservar N° debe tener cuatro dígitos numéricos.
-ERR_IMEI_LENGHT:El campo IMEI debe tener 15 dígitos.
 MSG_NUMERO_RESERVADO:El número de línea quedó reservado.<br>Para modificar alguno de los campos grisados, debe liberar la reserva de número realizada.
 
 ##MENSAJES GENERALES
