--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -2,8 +2,9 @@
 buscar:Buscar
 limpiar:Limpiar
 
-#Buscar Cuenta - Cant.Total
+#Buscar Cuenta - Cant.Total registros
 totalCuentasBuscadas:Número de resultados: 
+registrosMostrados:Mostrando Registros
 
 #Labels - Buscar Cuenta - Filtro
 numeroCliente:Nº Cliente:
