--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -196,6 +196,9 @@ obs_domicilio:Observaciones:
 usuario_domicilio:Usuario:
 fecha_Modificacion:Fecha Modificación:
 
+#Infocom:
+infocom:Infocom
+cuentaCorriente:Cuenta Corriente
 
 ##MENSAJES ERROR
 ERR_CAMPO_OBLIGATORIO:El campo {1} es obligatorio
