--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -98,6 +98,7 @@ origenReq:<span class="req">Origen:</span>
 entregaReq:<span class="req">Entrega:</span>
 facturacionReq:<span class="req">Facturación:</span>
 aclaracion:Aclaración:
+emailReq:<span class="req">Email:</span>
 domicilioTitle:Domicilio
 pataconexTitle:Pataconex
 creditoFidelizacionTitle:Crédito de Fidelización
