se agregaron variables para OPP

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -88,8 +88,12 @@ fechaCreacion: Fecha Creación
 
 #Labels - Editor Oportunidades
 estadoOpp:Estado OPP:
+estadoOportunidad: Estado Opp
 desde:Desde:
 hasta:Hasta:
+nroDocumento: Numero Doc.
+nroCuenta: Numero Cta.
+fecha: Fecha
 
 #Labels - Editar SS
 nssReq:<span class="req">NºSS:</span>
