nuevos msg para editor cuenta

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -49,8 +49,9 @@ anticipo:Anticipo
 cargo:Cargo
 iibb:IIBB
 use:Use
-nombreDivision:Nombre División
+nombreDivision:Nom. División
 validarTarjeta:Validar tarjeta
+validarCompletitud:Validar Completitud
 
 #Labels - Editor Cuenta - Telefono
 telefonoPanelTitle:Teléfono/Fax
@@ -205,22 +206,19 @@ fecha_Modificacion:Fecha Modificación:
 infocom:Infocom
 cuentaCorriente:Cuenta Corriente
 
-##MENSAJES ERROR
-ERR_CAMPO_OBLIGATORIO:El campo {1} es obligatorio
+##MENSAJES ERROR EDICION CUENTA
 ERR_DOMICILIO_FACTURACION:La cuenta debe tener un domicilio de facturación.
 ERR_DOMICILIO_ENTREGA:La cuenta debe tener un domicilio de entrega.
 ERR_DOMICILIO_PPAL_DUPLICADO:No se puede agregar un domicilio principal para la cuenta.
-ERR_FORMULARIO_DIRTY:Hay cambios sin guardar: presione Aceptar para descartarlos o Cancelar para continuar editando.
 ERR_TARJETA_NO_VALIDA:Tarjeta no válida: La tarjeta ingresada no es válida. (se)
 ERR_AL_VALIDAR_TARJETA:Hubo un error al validar tarjeta
-ERR_EMAIL_NO_VALIDO:El campo {1}: no tiene un email válido.
-ERR_FECHA_NO_VALIDA:El campo {1}: no tiene una fecha válida. Formato válido: "dd/mm/aaaa"
 ERR_FORMATO:El formato del campo {1} no es válido
 ERR_ANIO_NO_VALIDO:El año de vencimiento de la tarjeta no es válido
-ERR_DIA_HABIL:Debe ingresar un dia hábil
 ERR_FALTA_DOMICILIO_ENTREGA:La cuenta debe tener un domicilio principal de entrega.
 ERR_FALTA_DOMICILIO_FACTURACION:La cuenta debe tener un domicilio principal de facturación.
 ERR_CREAR_SS_EDITOR_CUENTA_DIRTY:La cuenta tiene cambios sin guardar. Guarde o descarte los cambios antes de crear una solicitud de servicio.
+ERR_NO_ACCESO_CUENTA:No tiene permiso para ver esa cuenta.
+MSG_CUENTA_GUARDADA_OK:La cuenta se guardó con exito
 
 ## Solicitud de servicio
 ERR_LENGHT:El campo {1} debe tener {2} dígitos.
@@ -236,10 +234,14 @@ ERR_NUMERO_RESERVA:El campo Reservar N° debe tener cuatro dígitos numéricos.
 MSG_NUMERO_RESERVADO:El número de línea quedó reservado.<br>Para modificar alguno de los campos grisados, debe liberar la reserva de número realizada.
 
 ##MENSAJES GENERALES
+ERR_CAMPO_OBLIGATORIO:El campo {1} es obligatorio
+ERR_FORMULARIO_DIRTY:Hay cambios sin guardar: presione Aceptar para descartarlos o Cancelar para continuar editando.
+ERR_EMAIL_NO_VALIDO:El campo {1}: no tiene un email válido.
+ERR_FECHA_NO_VALIDA:El campo {1}: no tiene una fecha válida. Formato válido: "dd/mm/aaaa"
+ERR_DIA_HABIL:Debe ingresar un dia hábil
 MSG_DIALOG_TITLE:Mensaje
 MSG_TARJETA_VALIDA:Tarjeta válida: La tarjeta ingresada es válida. (se)
 MSG_PREGUNTA_GUARDAR:¿Desea guardar los cambios?
 MSG_NO_HAY_DATOS_NUEVOS:No hay datos nuevos para guardar
-
 
 
