se agregaron labels para OPP

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -21,6 +21,11 @@ estado:Estado:
 cierreDesde:Cierre Desde:
 pataconex:Pataconex:
 firmas:Firmas:
+numSS: N° SS
+numCuenta: N° Cuenta
+equipos: Equipos
+pataconexTabla: Pataconex
+firmasTabla: Firmas
 
 #Labels - Editor Cuenta - Datos
 datos:Datos
@@ -88,6 +93,11 @@ usuario: Usuario
 fechaCreacion: Fecha Creación
 
 #Labels - Editor Oportunidades
+nombreDosPuntos:Nombre:
+apellidoDosPuntos: Apellido:
+numeroDosPuntos: Número:
+razonSocialDosPuntos: Razón Social:
+tipoDocDosPuntos: Tipo Doc.: 
 estadoOpp:Estado OPP:
 estadoOportunidad: Estado Opp
 desde:Desde:
