dev creacion/edicion division/suscriptor final

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -228,6 +228,7 @@ ERR_FALTA_DOMICILIO_ENTREGA:La cuenta debe tener un domicilio principal de entre
 ERR_FALTA_DOMICILIO_FACTURACION:La cuenta debe tener un domicilio principal de facturación.
 ERR_CREAR_SS_EDITOR_CUENTA_DIRTY:La cuenta tiene cambios sin guardar. Guarde o descarte los cambios antes de crear una solicitud de servicio.
 ERR_NO_ACCESO_CUENTA:No tiene permiso para ver esa cuenta.
+ERR_NO_CUENTA_SELECTED:Debe seleccionar una Cuenta
 MSG_CUENTA_GUARDADA_OK:La cuenta se guardó con exito
 
 ## Solicitud de servicio
