--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -106,6 +106,10 @@ nroDocumento: Numero Doc.
 nroCuenta: Numero Cta.
 fecha: Fecha
 
+#Labels - Editor OportunidadesEnCurso
+numeroClienteCompleto: Número cliente
+grupoSS: Grupo SS
+
 #Labels - Editar SS
 nssReq:<span class="req">NºSS:</span>
 nflota:NºFlota:
