se agregaron acentos

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -102,8 +102,8 @@ estadoOpp:Estado OPP:
 estadoOportunidad: Estado Opp
 desde:Desde:
 hasta:Hasta:
-nroDocumento: Numero Doc.
-nroCuenta: Numero Cta.
+nroDocumento: Número Doc.
+nroCuenta: Número Cta.
 fecha: Fecha
 
 #Labels - Editor OportunidadesEnCurso
@@ -170,7 +170,7 @@ suscriptor:Suscriptor
 alquilerAMBA:Alquiler (AMBA)
 ventaAMBA:Venta (AMBA)
 ventaAccesorio: Venta de Accesorios
-activacion:Activacion
+activacion:Activación
 ventaLicencia:Venta de Licencias BB
 
 #Common
