dev visualizacion cuenta desde resultado busqueda OPP v1

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -165,6 +165,7 @@ crearSS:^Crear SS
 agregarDivSusc:^Agregar
 division:División
 suscriptor:Suscriptor
+crearCuenta:crear cuenta
 
 #ListBox - SS - Agregar Item
 alquilerAMBA:Alquiler (AMBA)
@@ -218,6 +219,7 @@ fecha_Modificacion:Fecha Modificación:
 
 #Infocom:
 infocom:Infocom
+notas:Notas
 cuentaCorriente:Cuenta Corriente
 
 ##MENSAJES ERROR EDICION CUENTA
