--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -117,7 +117,7 @@ origenReq:<span class="req">Origen:</span>
 entregaReq:<span class="req">Entrega:</span>
 facturacionReq:<span class="req">Facturación:</span>
 aclaracion:Aclaración:
-emailReq:<span class="req">Email:</span>
+emailReq:<span class="req">E-Mail:</span>
 domicilioTitle:Domicilio
 pataconexTitle:Pataconex
 creditoFidelizacionTitle:Crédito de Fidelización
@@ -245,10 +245,12 @@ ERR_PATACONEX:La cantidad de Pataconex ingresada excede el Precio de Venta Total
 ERR_FALTA_ALQUILER:El ítem {1} debe tener un servicio adicional de tipo Alquiler Única Vez seleccionado.
 ERR_CANT_MA_CERO:El campo {1} debe ser mayor a 0 (cero).
 ERR_CANT_UNO: El campo Cantidad debe ser 1 para una reserva de número.
-ERR_REQUIRED_SELECTION:Debe seleccionar una de las opciones
+ERR_REQUIRED_SELECTION:Debe seleccionar una de las opciones.
+ERR_REQUIRED_LINEA:La Solicitud de Servicio debe tener al menos una línea.
 ERR_NUMERO_NO_DISPONIBLE:El número de línea no se encuentra disponible.
 ERR_NUMERO_RESERVA:El campo Reservar N° debe tener cuatro dígitos numéricos.
 MSG_NUMERO_RESERVADO:El número de línea quedó reservado.<br>Para modificar alguno de los campos grisados, debe liberar la reserva de número realizada.
+MSG_SOLICITUD_GUARDADA_OK:Se ha guardado la solicitud con éxito.
 
 ##MENSAJES GENERALES
 ERR_CAMPO_OBLIGATORIO:El campo {1} es obligatorio
