dev visualizacion cuenta desde resultado busqueda OPP v2

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -92,6 +92,12 @@ canalVentas:Canal Vtas.
 usuario: Usuario
 fechaCreacion: Fecha Creación
 
+##Labels - Cuenta Potencial
+competencia:Competencia:
+competenciaEq:Eq. Comp.:
+terminalesEstimadas:Term. est.:
+visitas:Visitas:
+
 #Labels - Editor Oportunidades
 nombreDosPuntos:Nombre:
 apellidoDosPuntos: Apellido:
