dev visualizacion cuenta desde resultado busqueda OPP v4

--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -106,6 +106,7 @@ razonSocialDosPuntos: Razón Social:
 tipoDocDosPuntos: Tipo Doc.: 
 estadoOpp:Estado OPP:
 estadoOportunidad: Estado Opp
+nroOPP:OPP Nr:
 desde:Desde:
 hasta:Hasta:
 nroDocumento: Número Doc.
