--- a/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
+++ b/src/main/java/ar/com/nextel/sfa/client/constant/SfaStatic.properties
@@ -256,6 +256,7 @@ ERR_REQUIRED_SELECTION:Debe seleccionar una de las opciones.
 ERR_REQUIRED_LINEA:La Solicitud de Servicio debe tener al menos una línea.
 ERR_NUMERO_NO_DISPONIBLE:El número de línea no se encuentra disponible.
 ERR_NUMERO_RESERVA:El campo Reservar N° debe tener cuatro dígitos numéricos.
+ERR_FALTA_CARGO_ACTIVACION_CDW: El ítem {1} debe tener al menos un servicio adicional de tipo Cargo Activación CDW seleccionado. 
 MSG_NUMERO_RESERVADO:El número de línea quedó reservado.<br>Para modificar alguno de los campos grisados, debe liberar la reserva de número realizada.
 MSG_SOLICITUD_GUARDADA_OK:Se ha guardado la solicitud con éxito.
 
